--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     ]
   },
   "devDependencies": {
-    "@redwoodjs/core": "6.3.2"
+    "@redwoodjs/core": "6.4.0-rc.45"
   },
   "eslintConfig": {
     "extends": "@redwoodjs/eslint-config",
