--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@redwoodjs/api": "6.4.0-rc.45",
+    "@redwoodjs/api-server": "6.4.0-rc.45",
     "@redwoodjs/graphql-server": "6.4.0-rc.45"
   }
 }
