--- a/web/package.json
+++ b/web/package.json
@@ -14,6 +14,7 @@
     "@redwoodjs/forms": "6.4.0-rc.45",
     "@redwoodjs/router": "6.4.0-rc.45",
     "@redwoodjs/web": "6.4.0-rc.45",
+    "@redwoodjs/web-server": "6.4.0-rc.45",
     "humanize-string": "2.1.0",
     "prop-types": "15.8.1",
     "react": "18.2.0",
