--- a/api/package.json
+++ b/api/package.json
@@ -8,6 +8,7 @@
     "@redwoodjs/fastify": "6.4.0-rc.45+cd3494993",
     "@redwoodjs/graphql-server": "6.4.0-rc.45",
     "@redwoodjs/project-config": "6.4.0-rc.45+cd3494993",
+    "@redwoodjs/realtime": "6.4.0-rc.45+cd3494993",
     "chalk": "4.1.2",
     "fastify": "^4.23.2"
   }
